# rtrace

./: .gitignore  Cargo.toml  LICENSE  README.md  TASKS.md  analyze_plus.js  architectural_study.json  copilot-instructions.md  crystal_garden.json  debug_kdtree.rs  dreamy_atmosphere.json  example.html  example.js  herebyfile.mjs  index.d.ts  index.js  multithreaded_demo.js  package-lock.json  package.json  performance_test.js  radial_spheres_example.js  render_plus_debug.js  render_plus_hires.js  schema.json  technical_precision.json  test.js  test_multithreaded.js  test_plus_bounds.js
.github/: copilot-instructions.md
bindings/node/: Cargo.toml
bindings/node/src/: lib.rs
bindings/wasm/: Cargo.toml
cli/: Cargo.toml
cli/src/: auto_camera_cli.rs  main.rs
doc/: README.md  diffuse_lights.md  grid-backgrounds.md  rainbow-spiral-scene.js
doc/scenes/: camera-perspective.json  checkerboard-advanced.json  checkerboard-basic.json  example-complete.json  lighting-multiple.json  material-properties.json  material-reflectivity.json  object-cube.json  object-mesh.json  object-plane-grid.json  object-sphere.json  sphere.stl  (+10 more)
examples/: Espresso Tray.stl  README.md  diffuse_light_demo.json  espresso_tray_3d.json  espresso_tray_front.json  espresso_tray_left.json  espresso_tray_perspective.json  espresso_tray_top.json  fine_grid_demo.json  fog_demonstration.json  fog_scene.json  grid_background_side.json  grid_background_test.json  grid_background_top.json  icosahedron.stl  icosahedron_front.json  icosahedron_perspective.json  mesh_example.json  multiple_objects.json  ortho_grid_demo.json  outline_demo.json  perspective_demo.json  plus.stl  plus_front.json  plus_perspective.json  plus_side.json  radial_spheres.json  side_view_grid.json  simple_cube.json  simple_plane.json  simple_triangle.json  test_mesh_transforms.json  transform_demo.json
scripts/: README.md  analyze_plus.js  example.js  multithreaded_demo.js  radial_spheres_example.js  render_plus_debug.js  render_plus_hires.js  test.js  test_plus_bounds.js
showcase/: cat.json  cubestack.json
src/: auto_camera.rs  camera.rs  lib.rs  lighting.rs  mesh.rs  outline.rs  ray.rs  renderer.rs  scene.rs
tools/: README.md  benchmark_optimizations.rs  debug_kdtree.rs  test_kdtree_consistency.rs
(+1 files in other folders)
