[workspace]
members = [
    ".",
    "cli",
    "bindings/node"
]

[package]
name = "rtrace"
version = "0.1.0"
edition = "2021"
description = "A minimal Rust library with Node.js and WASM bindings"
license = "MIT"
repository = "https://github.com/SeaRyanC/rtrace"

[lib]
name = "rtrace"
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.24"
nalgebra = "0.33"
rayon = "1.8"
rand = "0.8"

[[bin]]
name = "test_kdtree_consistency"
path = "tools/test_kdtree_consistency.rs"

[[bin]]
name = "debug_kdtree"
path = "tools/debug_kdtree.rs"

[[bin]]
name = "benchmark_optimizations"
path = "tools/benchmark_optimizations.rs"