[package]
name = "rtrace-cli"
version = "0.1.0"
edition = "2021"
description = "CLI for rtrace library"

[[bin]]
name = "rtrace"
path = "src/main.rs"

[[bin]]
name = "rtrace-auto-camera"
path = "src/auto_camera_cli.rs"

[dependencies]
rtrace = { path = ".." }
clap = { version = "4.0", features = ["derive"] }
serde_json = "1.0"